src/UI/Cells/cells.less
@import "../Content/Bootstrap/mixins";
@import "../Content/Bootstrap/variables";
@import "../Content/Bootstrap/buttons";
@import "../Shared/Styles/clickable";
@import "../Content/mixins";
@import "../Content/variables";

.series-title-cell {
  .text-overflow();

  @media @sm {
    max-width: 250px
  }
}

.episode-title-cell {
  .text-overflow();

  color: #428bca;
  text-decoration: none;

  &:focus, &:hover {
    color: #2a6496;
    text-decoration: underline;
    cursor: pointer;
  }

  @media @lg {
    max-width: 350px;
  }

  @media @md {
    max-width: 250px;
  }

  @media @sm {
    max-width: 200px;
  }
}

.air-date-cell {
  width : 120px;
  cursor: default;
  .text-overflow();
}

.relative-date-cell {
  width : 150px;
  cursor: default;
  .text-overflow();
}

.history-event-type-cell {
  width : 10px;
}

.download-report-cell {
  .clickable();

  i {
    .clickable();
  }
}

.toggle-cell{
  .clickable();
  .not-selectable;
}

.approval-status-cell {
  widows : 10px;
  .popover {
    max-width : 400px;
  }

  i {
    color : @brand-danger;
  }
}

td.episode-status-cell, td.quality-cell {
  text-align: center;
  width: 80px;

  .badge {
    font-size: 9px;
  }

  .progress {
    height        : 10px;
    margin-top    : 5px;
    margin-bottom : 0px;
  }
}

.history-details-cell {
  .clickable();
  width: 10px;

  i {
    .clickable();
  }
}

.release-title-cell {
  max-width: 400px;
  word-wrap: break-word;
}

.episode-actions-cell {
  width: 65px;

  li {
    .clickable();

    display: block;
    padding: 3px 20px;
    clear: both;
    font-weight: normal;
    line-height: 20px;
    color: rgb(51, 51, 51);
    white-space: nowrap;
  }

  li:hover {
    text-decoration: none;
    color: rgb(255, 255, 255);
    background-color: rgb(0, 129, 194);
  }
}

.episode-activity-details-cell {
  width : 18px;
}

.episode-detail-modal {
  .episode-actions-cell {
    width : 18px;
  }
}

.series-actions-cell {
  width     : 56px;
  min-width : 56px;
}

.timeleft-cell {
  cursor : default;
  width  : 80px;
  text-align: center;
}

.queue-status-cell {
  width: 20px;
  text-align: center !important;
}

.download-log-cell {
  width: 80px;
}

td.delete-episode-file-cell {
  .clickable();

  text-align: center;
  width: 20px;
  font-size: 20px;

  i {
    .clickable();
  }
}

.series-status-cell {
  width: 16px;
}

.episode-number-cell {
  cursor : default;
}

.backup-type-cell {
  width : 20px;
}

.table>tbody>tr>td, .table>thead>tr>th {

  &.episode-warning-cell {
    width         : 1px;
    padding-left  : 0px;
    padding-right : 0px;
  }
}

